--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>testing</title>
+	<title>test</title>
 </head>
-<h1>trial</h1>
+<h1>:(</h1>
 <body>
 
 </body>
