--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>idk</title>
-<h1>ah-bh noob</h1>
-</head>
+<head> <title>idk</title> </head>
 <body>
-
+  <h1><i>dis my website</i></h1>
+  <ol>
+    <li>yes</li>
+    <li>yes</li>
+    <li>me</li>
+    <li>agree</li>
+  </ol>
+  <h6><mark>alwa**i noob</mark></h6>
+  <br>
+  <a href="https://flightradar24.com" target=_blank><img src="test.png" style="height: 75%; width: 75%;"></a>
 </body>
-</html>
